# raven

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
backend/: config.py  main.py
backend/agents/: graph_rag.py  planner.py  tools.py
backend/api/: routes_admin.py  routes_agent.py  routes_eval.py  routes_ingest.py  routes_query.py
backend/evaluation/: benchmarks.py  ragas_eval.py  synthetic.py
backend/generation/: citations.py  context.py  llm.py  validation.py
backend/ingestion/: chunker.py  embedder.py  parser.py
backend/models/: documents.py  queries.py  responses.py
backend/retrieval/: hybrid.py  postprocess.py  query.py  reranker.py
backend/storage/: cache.py  database.py  vector.py
scripts/: setup.sh  start.sh
ui/: app.py
ui/pages/: 1_💬_Chat.py  2_📄_Documents.py  3_⚙️_Settings.py  4_📊_Evaluation.py
